--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "parcel build src/index.js",
-    "build:demo": "parcel build demo/index.html --out-dir demo/dist",
+    "build:demo": "parcel build demo/index.html --out-dir .deploy/demo",
     "build:docs": "vuepress build docs",
     "start:docs": "vuepress dev docs",
     "start:demo": "parcel demo/index.html",
