--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "jsx": "preserve",
         "target": "ESNext",
         "moduleResolution": "Node",
         "baseUrl": "./",
